Fix all unit tests.