@@ -14,7 +14,6 @@ import org.github.gestalt.config.node.ConfigNode;
 import org.github.gestalt.config.node.ConfigNodeManager;
 import org.github.gestalt.config.node.LeafNode;
 import org.github.gestalt.config.node.MapNode;
-import org.github.gestalt.config.path.mapper.CamelCasePathMapper;
 import org.github.gestalt.config.path.mapper.StandardPathMapper;
 import org.github.gestalt.config.post.process.PostProcessor;
 import org.github.gestalt.config.reflect.TypeCapture;
@@ -54,7 +53,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -101,7 +100,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -171,7 +170,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs, Tags.of("toys", "ball"))),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -232,7 +231,7 @@ class GestaltTest {
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(
                 Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder(), new ObjectDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -299,7 +298,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Arrays.asList(new MapConfigSource(configs), new MapConfigSource(configs2)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -351,7 +350,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Arrays.asList(new MapConfigSource(configs), new MapConfigSource(configs2), new MapConfigSource(configs3)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -397,7 +396,7 @@ class GestaltTest {
             Arrays.asList(new MapConfigSource(configs), new MapConfigSource(configs2, Tags.of("toy", "ball")),
                 new MapConfigSource(configs3)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -441,7 +440,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, null, Collections.singletonList(new TestPostProcessor("aaa")));
 
         gestalt.loadConfigs();
@@ -475,7 +474,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, null, Collections.singletonList(new TestPostProcessor("aaa")));
 
         Mockito.when(configNodeManager.postProcess(Mockito.any())).thenReturn(ValidateOf.validateOf(null, Collections.emptyList()));
@@ -504,7 +503,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, null, Collections.singletonList(new TestPostProcessor("aaa")));
 
         Mockito.when(configNodeManager.postProcess(Mockito.any())).thenReturn(
@@ -534,7 +533,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, null, Collections.singletonList(new TestPostProcessor("aaa")));
 
         Mockito.when(configNodeManager.postProcess(Mockito.any())).thenReturn(
@@ -564,7 +563,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, null,
             Arrays.asList(new TestPostProcessorSwapNodes("path1", "path2"), new TestPostProcessorSwapNodes("prop1", "prop2")));
 
@@ -600,7 +599,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -653,7 +652,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -682,7 +681,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -723,7 +722,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -763,7 +762,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Arrays.asList(new MapConfigSource(configs), new MapConfigSource(configs2)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder(),
-                new ListDecoder()), configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                new ListDecoder()), configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, config, new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -826,7 +825,7 @@ class GestaltTest {
         Gestalt gestalt = new GestaltCore(configLoaderRegistry,
             Collections.emptyList(),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList());
 
         try {
@@ -856,7 +855,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Collections.singletonList(new StringDecoder()), configNodeManager, lexer,
-                Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -894,7 +893,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new StringDecoder(), new ExceptionDecoder()), configNodeManager, lexer,
-                Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -929,7 +928,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, null, Collections.emptyList());
 
         try {
@@ -965,7 +964,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, config, new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -1010,7 +1009,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, config, new ConfigNodeManager(), null, Collections.emptyList());
 
         GestaltConfigurationException e = Assertions.assertThrows(GestaltConfigurationException.class, gestalt::loadConfigs);
@@ -1040,7 +1039,7 @@ class GestaltTest {
         Gestalt gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, config, new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -1079,7 +1078,7 @@ class GestaltTest {
         Gestalt gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, config, new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -1113,7 +1112,7 @@ class GestaltTest {
         Gestalt gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(new MapConfigSource(configs)),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             new PathLexer("."), new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -1159,7 +1158,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(source),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, coreReloadStrategy, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -1217,7 +1216,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(source),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, coreReloadStrategy, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -1278,7 +1277,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             null,
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, coreReloadStrategy, Collections.emptyList());
 
         try {
@@ -1315,7 +1314,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(source),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, coreReloadStrategy, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -1384,7 +1383,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(source),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, coreReloadStrategy, Collections.emptyList());
 
         gestalt.loadConfigs();
@@ -1449,7 +1448,7 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             Collections.singletonList(source),
             new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())),
+                configNodeManager, lexer, List.of(new StandardPathMapper())),
             lexer, new GestaltConfig(), configNodeManager, coreReloadStrategy, Collections.emptyList());
 
         gestalt.loadConfigs();
