@@ -5,7 +5,6 @@ import org.github.gestalt.config.exceptions.GestaltException;
 import org.github.gestalt.config.lexer.SentenceLexer;
 import org.github.gestalt.config.node.ConfigNodeService;
 import org.github.gestalt.config.node.LeafNode;
-import org.github.gestalt.config.path.mapper.CamelCasePathMapper;
 import org.github.gestalt.config.path.mapper.StandardPathMapper;
 import org.github.gestalt.config.reflect.TypeCapture;
 import org.github.gestalt.config.utils.ValidateOf;
@@ -15,7 +14,6 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -70,7 +68,7 @@ class BigDecimalDecoderTest {
 
         ValidateOf<BigDecimal> validate = doubleDecoder.decode("db.port", new LeafNode("124.5"), TypeCapture.of(Double.class),
             new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
-                Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())));
+                List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(BigDecimal.valueOf(124.5f), validate.results());
@@ -83,7 +81,7 @@ class BigDecimalDecoderTest {
 
         ValidateOf<BigDecimal> validate = doubleDecoder.decode("db.port", new LeafNode("124.5"), new TypeCapture<Double>() {
         }, new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
-            Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())));
+            List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(BigDecimal.valueOf(124.5f), validate.results());
@@ -96,7 +94,7 @@ class BigDecimalDecoderTest {
 
         ValidateOf<BigDecimal> validate = doubleDecoder.decode("db.port", new LeafNode("124"), TypeCapture.of(Double.class),
             new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
-                Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())));
+                List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(BigDecimal.valueOf(124.0f), validate.results());
@@ -109,7 +107,7 @@ class BigDecimalDecoderTest {
 
         ValidateOf<BigDecimal> validate = doubleDecoder.decode("db.port", new LeafNode("12s4"), TypeCapture.of(Double.class),
             new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
-                Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())));
+                List.of(new StandardPathMapper())));
         Assertions.assertFalse(validate.hasResults());
         Assertions.assertTrue(validate.hasErrors());
         Assertions.assertNull(validate.results());
