@@ -5,7 +5,6 @@ import org.github.gestalt.config.exceptions.GestaltException;
 import org.github.gestalt.config.lexer.SentenceLexer;
 import org.github.gestalt.config.node.ConfigNodeService;
 import org.github.gestalt.config.node.LeafNode;
-import org.github.gestalt.config.path.mapper.CamelCasePathMapper;
 import org.github.gestalt.config.path.mapper.StandardPathMapper;
 import org.github.gestalt.config.reflect.TypeCapture;
 import org.github.gestalt.config.utils.ValidateOf;
@@ -15,7 +14,6 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import java.math.BigInteger;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -69,7 +67,7 @@ class BigIntegerDecoderTest {
 
         ValidateOf<BigInteger> validate = doubleDecoder.decode("db.port", new LeafNode("124"), TypeCapture.of(Double.class),
             new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
-                Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())));
+                List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(BigInteger.valueOf(124), validate.results());
@@ -82,7 +80,7 @@ class BigIntegerDecoderTest {
 
         ValidateOf<BigInteger> validate = doubleDecoder.decode("db.port", new LeafNode("124"), new TypeCapture<Double>() {
         }, new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
-            Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())));
+            List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(BigInteger.valueOf(124), validate.results());
@@ -95,7 +93,7 @@ class BigIntegerDecoderTest {
 
         ValidateOf<BigInteger> validate = doubleDecoder.decode("db.port", new LeafNode("124"), TypeCapture.of(Double.class),
             new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
-                Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())));
+                List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(BigInteger.valueOf(124), validate.results());
@@ -108,7 +106,7 @@ class BigIntegerDecoderTest {
 
         ValidateOf<BigInteger> validate = doubleDecoder.decode("db.port", new LeafNode("12s4"), TypeCapture.of(Double.class),
             new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
-                Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())));
+                List.of(new StandardPathMapper())));
         Assertions.assertFalse(validate.hasResults());
         Assertions.assertTrue(validate.hasErrors());
         Assertions.assertNull(validate.results());
@@ -125,7 +123,7 @@ class BigIntegerDecoderTest {
 
         ValidateOf<BigInteger> validate = doubleDecoder.decode("db.port", new LeafNode("124.2"), TypeCapture.of(Double.class),
             new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
-                Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper())));
+                List.of(new StandardPathMapper())));
         Assertions.assertFalse(validate.hasResults());
         Assertions.assertTrue(validate.hasErrors());
         Assertions.assertNull(validate.results());
