@@ -5,7 +5,6 @@ import org.github.gestalt.config.exceptions.GestaltException;
 import org.github.gestalt.config.lexer.PathLexer;
 import org.github.gestalt.config.lexer.SentenceLexer;
 import org.github.gestalt.config.node.*;
-import org.github.gestalt.config.path.mapper.CamelCasePathMapper;
 import org.github.gestalt.config.path.mapper.StandardPathMapper;
 import org.github.gestalt.config.reflect.TypeCapture;
 import org.github.gestalt.config.test.classes.*;
@@ -28,7 +27,7 @@ class ProxyDecoderTest {
         configNodeService = new ConfigNodeManager();
         registry = new DecoderRegistry(Arrays.asList(new LongDecoder(), new IntegerDecoder(), new StringDecoder(),
             new ObjectDecoder(), new FloatDecoder(), new BooleanDecoder(), new ProxyDecoder()), configNodeService, lexer,
-            Arrays.asList(new StandardPathMapper(), new CamelCasePathMapper()));
+            List.of(new StandardPathMapper()));
     }
 
     @Test
